# trainiscord

./: .dockerignore  .env  .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml  test.py
src/: main.py
src/api/: student_routes.py
src/config/: database.py
src/models/: student.py
src/routes/: student_route.py  term_route.py
src/schemas/: student.py  terms.py
src/services/: student_service.py  term_service.py
src/sql/: student_query.py
